2017-09-09  Ethan A Merritt  <merritt@u.washington.edu>

	* src/axis.c( gen_tics ) src/axis.h( reorder_if_necessary ):
	New macro to reorder the min/max of axis ranges (but could be used
	elsewhere).  If the mapping function of linked axes inverts the
	axis direction, tics were not being generated because min > max.
	E.g. set link x2 via 100-x inv 100-x; set x2tics; plot [50:40] x

2017-09-05  Ethan A Merritt  <merritt@u.washington.edu>

	* src/axis.c src/axis.h src/datafile.c src/gp_time.h src/gp_types.h
	src/internal.c src/time.c demo/timedat.dem docs/gnuplot.doc:
	Gnuplot already supports relative time format specifiers %tH %tM %tS
	for output via strftime() and in the time format for axis tic labels.
	Now we add the same format specifiers as an option for input via
	strptime().  They can also be used to read data fields containing 
	degrees/minutes/seconds.

2017-09-04  Dima Kogan  <dima@secretsauce.net>

	* src/axis.c (clone_linked_axes):  When sanity checking the via/inverse
	mapping functions for linked or nonlinear axes, adjust the allowable
	difference by a scale factor related to the axis range.

	* configure.ac:  Add $LIBRARIES_FOR_X to WX_LIBS so that it pickes
	up -lX11 as required by wxgtk3

2017-09-04  Ethan A Merritt  <merritt@u.washington.edu>

	* src/set.c src/tables.c src/tables.h src/unset.c src/util.c
	src/util.h src/show.c:  Developer-only command "set debug <val>"
	intended to facilitate A/B testing of new code.  Trial code can be
	wrapped in a test such as
	    if (debug > 0) { execute trial code }

2017-09-03  Daniel J Sebald <daniel.sebald@ieee.org>

	* configure.ac:  Use AC_MSG_RESULT rather than AC_MSG_WARN to report
	which Qt version will be used.

2017-09-03  Ethan A Merritt  <merritt@u.washington.edu>

	* src/time.c (xstrftime):  The variant format specs for time
	%tH %tM did not behave as documented in that hours wrapped at 24 and
	minutes at 60 if the decimal precision modifier was missing.
