@@ -6,6 +6,10 @@
 	axis direction, tics were not being generated because min > max.
 	E.g. set link x2 via 100-x inv 100-x; set x2tics; plot [50:40] x
 
+	* src/axis.c (parse_range):  Refactor parse_range() to handle
+	in-line ranges for linked or nonlinear axes.
+	Bug #1964
+
 2017-09-05  Ethan A Merritt  <merritt@u.washington.edu>
 
 	* src/axis.c src/axis.h src/datafile.c src/gp_time.h src/gp_types.h
